<resources>
    <string name="app_name">KotlinApp</string>

    <!-- login screen -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_my_account">Create my account</string>

    <!-- create group dialog fragment -->
    <string name="create_group_header">Add new group</string>
    <string name="group_name">Group name</string>
    <string name="group_description">Group description (Optional)</string>
    <string name="create_group">Create Group</string>
    <string name="update_group_header">Upgrade group details</string>
    <string name="update_group">Update Group</string>

    <!-- user registration -->
    <string name="display_name">Display Name</string>
    <string name="register">Register</string>

    <!-- navigation drawer -->
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="welcome">Welcome!</string>

    <!-- side drawer menu -->
    <string name="side_drawer_menu_change_password">Change Password</string>
    <string name="side_drawer_menu_logout">Log Out</string>

</resources>
