<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="proto.com.kotlinapp.activities.RegistrationActivity">

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/register"
        android:textColor="@android:color/black"
        style="@style/Widget.AppCompat.Button.Colored" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_create"
        android:orientation="vertical">
        <!-- email -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:theme="@style/FieldsStyle"
            app:hintTextAppearance="@style/FloatingLabelStyle"
            app:passwordToggleEnabled="false">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="@dimen/_11sdp" />
        </android.support.design.widget.TextInputLayout>

        <!-- password -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:theme="@style/FieldsStyle"
            app:hintTextAppearance="@style/FloatingLabelStyle"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/_11sdp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:theme="@style/FieldsStyle"
            app:hintTextAppearance="@style/FloatingLabelStyle"
            app:passwordToggleEnabled="false">

            <EditText
                android:id="@+id/et_display_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/display_name"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textSize="@dimen/_11sdp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</RelativeLayout>
